# Rust-Notes

./: 01_enum_basic.rs  02_enum_with_data.rs  03_enum_with_impl.rs  04_enum_with_option_result.rs  Coming-soon.md  README.md  Readme.md  associated_functions.md  enum.md  impl.md  method_chaining.md  rectangle_operations.rs  struct.md  traits.rs
Codewars/: Readme.md
LeetCode-Problems/: Readme.md
LeetCode-Problems/palindrome/: Readme.md
LeetCode-Problems/roman-to-integer/: Readme.md
LeetCode-Problems/two-sum/: Readme.md
Projects/To-do-CLI/: tasks.txt
Projects/rest-api-axum/: Cargo.toml
Projects/rest-api-axum/src/: main.rs
Projects/rest-api-axum/templates/: index.html
Rust-lang-book/: Readme.md
Rust-lang-book/asynchronous/: Readme.md
Rust-lang-book/collections/: vec_string_hashmap.md
Rust-lang-book/concurrency/: Readme.md
Rust-lang-book/control_flow/: loops.md
Rust-lang-book/data_types/: data_type.md
Rust-lang-book/packages_crates_modules/: mod.md
Rust-lang-book/patterns-and-matching/: Readme.md
Rust-lang-book/structs/: structs.md
Rust-lang-book/tests/: tests.md
Rust-lang-book/variables/: shadowing.md
asynchronous/src/: main.rs
control_flow/: Cargo.toml  if_else.md
crates/: Readme.md
enums/: enums.md
error-handling/: errors.md
functions/: functions.md
generics-traits-lifetimes/: Readme.md
iterators-closures/: Readme.md
minigrep/src/: lib.rs
oop/: Readme.md
ownership/: ownership.md  references.md
packages_crates_modules/src/: garden.rs  main.rs
smart-pointers/: Readme.md
variables/: constants.md  mutability.md
(+9 files in other folders)
