[package]
name = "rest-api-axum"
version = "0.1.0"
edition = "2024"
default-run = "rest-api-axum"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.145"
tower = "0.4"
tower-http = { version = "0.6.6", features = ["fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }